--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@octokit/core": "^6.1.2",
+    "@octokit/rest": "^21.0.2",
     "astro": "^4.15.9"
   }
 }
