--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
+    "preview": "deno run --allow-net --allow-read --allow-env ./dist/server/entry.mjs",
     "astro": "astro"
   },
   "dependencies": {
+    "@deno/astro-adapter": "^0.1.3",
     "@octokit/core": "^6.1.2",
     "@octokit/rest": "^21.0.2",
     "astro": "^4.15.9"
